--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>About</title>
-    <link rel="stylesheet" href="/css/normalize.css" media="screen" title="no title" charset="utf-8">
-    <link rel="stylesheet" href="/css/styles.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/normalize.css" media="screen" title="no title" charset="utf-8">
+    <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
   </head>
   <body>
     <div class="container">
 
-      <nav>
+      <nav class="group">
         <div class="logo">
           <h1>Shyama</h1>
         </div>
-        <div class="menu">
+        <div class="nav">
           <ul>
             <li>work</li>
             <li>about</li>
@@ -23,10 +23,10 @@
         </div>
       </nav>
 
-      <div class="main-content">
+      <div class="content-row">
         <div class="primary col">
-          <h5>Hi! My name is Shyama (rhymes with llama) Golden. I’m an artist/graphic designer living in Brooklyn, NY. I’m currently working on an illustrated book called Catsquatch and sharing my process as I go.
-          </h5>
+          <h3>Hi! My name is Shyama (rhymes with llama) Golden. I’m an artist/graphic designer living in Brooklyn, NY. I’m currently working on an illustrated book called Catsquatch and sharing my process as I go.
+          </h3>
           <p>
             If you have any questions, you can email me at art@shyamagolden.com. If you don’t have any questions you can read some Never Asked Questions. If you’re more into brevity, you can tweet at me or if you’re the kind of person who prefers things square I’m now on Instagram.
           </p>
@@ -45,6 +45,7 @@
             <li>See some process shots on Dribbble</li>
           </ul>
         </div>
+        </div>
 
         <div class="images">
           <img src="css/img/image1.jpg" alt="" />
@@ -53,7 +54,6 @@
           <p>
             Photo Credit: Features & More.
           </p>
-        </div>
 
       </div>
 
