Add styling to text.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         </div>
       </nav>
 
-      <div class="content-row">
+      <div class="content-row group">
         <div class="primary col">
-          <h3>Hi! My name is Shyama (rhymes with llama) Golden. I’m an artist/graphic designer living in Brooklyn, NY. I’m currently working on an illustrated book called Catsquatch and sharing my process as I go.
-          </h3>
+          <h4>Hi! My name is Shyama (<em>rhymes with llama</em>) Golden. I’m an artist/graphic designer living in Brooklyn, NY. I’m currently working on an illustrated book called <em>Catsquatch</em> and <a href="#">sharing my process</a> as I go.
+          </h4>
           <p>
-            If you have any questions, you can email me at art@shyamagolden.com. If you don’t have any questions you can read some Never Asked Questions. If you’re more into brevity, you can tweet at me or if you’re the kind of person who prefers things square I’m now on Instagram.
+            If you have any questions, you can email me at art@shyamagolden.com. If you don’t have any questions you can read some <a href="#">Never Asked Questions</a>. If you’re more into brevity, you can <a href="#">tweet at me</a> or if you’re the kind of person who prefers things square <a href="#">I’m now on Instagram</a>.
           </p>
         </div>
 
@@ -37,12 +37,12 @@
             You can also find out more below:
           </p>
           <ul>
-            <li>The Great Discontent: Read Interview</li>
-            <li>Method and Craft: Read Interview</li>
-            <li>BigCartel: Read Interview</li>
-            <li>The Daily Texan: Read article</li>
-            <li>Featured by Tumblr</li>
-            <li>See some process shots on Dribbble</li>
+            <li>The Great Discontent: <a href="#">Read Interview</a></li>
+            <li>Method and Craft: <a href="#">Read Interview</a></li>
+            <li>BigCartel: <a href="#">Read Interview</a></li>
+            <li>The Daily Texan: <a href="#">Read article</a></li>
+            <li>Featured by <a href="#">Tumblr</a></li>
+            <li>See some process shots on <a href="#">Dribbble</a></li>
           </ul>
         </div>
         </div>
