--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>About</title>
     <link rel="stylesheet" href="css/normalize.css" media="screen" title="no title" charset="utf-8">
     <link rel="stylesheet" href="css/styles.css" media="screen" title="no title" charset="utf-8">
+    <meta name="viewport" content="width=device-width">
   </head>
   <body>
     <div class="container">
@@ -13,7 +14,7 @@
         <div class="logo">
           <h1>Shyama</h1>
         </div>
-        <div class="nav">
+        <div class="nav group">
           <ul>
             <li>work</li>
             <li>about</li>
