Add logo image.

--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 
       <nav class="group">
         <div class="logo">
-          <h1>Shyama</h1>
+          <img src="css/img/logo.png" alt="Logo" />
         </div>
         <div class="nav group">
           <ul>
-            <li>work</li>
-            <li>about</li>
-            <li>blog</li>
-            <li>store</li>
+            <li>Work</li>
+            <li>About</li>
+            <li>Blog</li>
+            <li>Store</li>
           </ul>
         </div>
       </nav>
@@ -52,11 +52,15 @@
           <img src="css/img/image1.jpg" alt="" />
           <img src="css/img/image2.jpg" alt="" />
           <img src="css/img/image3.jpg" alt="" />
+        </br>
+
+        </div>
+        <div id="credit">
           <p>
-            Photo Credit: Features & More.
+            Photo Credit: <a href="#">Features & More</a>.
           </p>
 
-      </div>
+        </div>
 
 
 
